src/scss/layout/_container.scss
//html {
//  margin-top: 82px;
//  font-size: $type-3 !important;
//
//  @include respond(sm) {
//    margin-top: 82px;
//  }
//
//  @include respond(xs) {
//    margin-top: 66px;
//  }
//}
//

* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box !important;
  text-rendering: optimizeLegibility;
}

body > main {min-height: 400px;
}

.utk-lib-digital-front {
  position: relative;
  z-index: 0;
}

.utk-digital--header {
  width: 100%;
  position: relative;
  z-index: 1;
  background-color: $gray-0;

  @include respond(xs, sm) {
    display: flex;
    flex-direction: column;
  }
}

.utk-digital--collections {
  display: block;
  position: relative;
  z-index: 0;
  padding-top: $golden-ratio-4;
  background-color: $gray-0;
}

.utk-digital--grid {
  display: flex;
  flex-flow: wrap;
  margin-left: -23.5px;
  width: calc(100% + 47px);
  margin-top: $golden-ratio-4;
}

